# parserconfig

./: README.md  setup.cfg  tox.ini
parserconfig/: __init__.py  parserconfig.py
tests/: conftest.py  test_exceptions.py  test_parserconfig.py
