[metadata]
name = parserconfig
version = 1.0.0

description = Plug-n-Play ConfigParser for extensible use cases.
long_description = file: README.md
long_description_content_type = text/markdown

author = Steven Cassamajor
author_email = contributor@networkaxis.org
url = https://github.com/Fauxsys/parserconfig.git
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
packages = find:

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
test =
    pytest
    pytest-cov
    tox